fix: correct styles for scrollbar

--- a/src/scss/main-styles.scss
+++ b/src/scss/main-styles.scss
@@ -10,4 +10,5 @@
 html {
   font-size: 10px;
   font-family: "SourceSansPro";
+  overflow-x: overlay;
 }
