--- a/src/scss/scrollbar.scss
+++ b/src/scss/scrollbar.scss
@@ -1,15 +1,15 @@
 ::-webkit-scrollbar {
   width: 0.5rem;
+  height: 1rem;
   background-color: transparent;
-  border-radius: 1rem;
-  margin-left: 0.5rem;
+  border-radius: 2rem;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #474a59;
+  background-color: rgba(71, 74, 89, 0.3);
   border-radius: 2rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #303240;
+  background-color: rgba(71, 74, 89, 0.4);
 }
